--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Московский постамат"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Московский постамат</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
